[package]
name = "jsontest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
regex = "1.5.6"
lazy_static = "1.4.0"
dialoguer = "0.10.1"
clap = { version = "3.2.6", features = ["derive"] }